# qt_tree_model_practice

./: .gitignore  CMakeLists.txt  README.md  temp.json  temp2.json
src/: CMakeLists.txt  main.cpp
src/gui/: frm_main.cpp  frm_main.h  frm_main.ui
src/models/: tree_model.cpp  tree_model.h  tree_model_delegate.cpp  tree_model_delegate.h
src/res/: resource.qrc
